Fix z-index of  to prevent table content to go over the header when scrolling

--- a/projects/pastanaga-angular/src/styles/components/_tables.scss
+++ b/projects/pastanaga-angular/src/styles/components/_tables.scss
@@ -33,6 +33,7 @@
     position: sticky;
     text-transform: $text-transform-table-header;
     top: 0;
+    z-index: 1;
   }
 
   .no-background .pa-table-grid--header {
